Structure of Sections 1 and 2 (+start of 3)

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -74,7 +74,7 @@
 \author{Ilya Mandel}
 \email{imandel@star.sr.bham.ac.uk}
 \affiliation{\addBham}
-\author{Alison J.~Farmer}
+\author{Alison Farmer}
 \affiliation{kW Engineering, Oakland, California, 94612, USA}
 
 \begin{abstract}
@@ -89,7 +89,10 @@ LIGO and Virgo detectors has recently directly observed gravitational waves from
 
 The subject of merging stellar-mass binaries as gravitational-wave sources is perfectly suited to an informal colloquium presentation. Several formal reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}. More reviews are certainly in the works. However, it is somewhat premature to formally review a field that is both rapidly evolving and very much in its infancy.  With just a few detections to date of gravitational waves from merging black holes \citep{GW150914,GW151226,BBH:O1,GW170104,GW170608,GW170814}, and one from merging neutron stars \citep{GW170817}, we are only beginning to explore the population of merging compact-object binaries.  We are not yet certain of the dominant formation channels for these sources, or even of the full range of astrophysical questions that gravitational-wave observations will answer. It is clear, however, that there are many important and exciting questions to explore.
 
-In this colloquium paper, we focus on the questions that strike us as being most interesting and timely at this stage of the field's development.  These will indeed mostly be questions rather than answers, and the list is undoubtedly biased by our own interests. Further, we do not attempt to systematically survey all of the relevant literature.  In other words, this is emphatically {\it not} a review.
+\textcolor{red}{Can we go bigger picture here and say (briefly) why binary star evolution is interesting and/or important? A very quick summary of the Prospects section?}
+
+In this colloquium paper, we focus on the questions that strike us as being most interesting and timely at this stage of the field's development.  These will indeed mostly be questions rather than answers, and the list is undoubtedly biased by our own interests. Further, we do not attempt to systematically survey all of the relevant literature.  In other words, this is emphatically {\it not} a review. \textcolor{red}{Can we summarize the questions in one or two sentences? Understanding the evolution of massive stellar binaries? Something else?}
+
 
 Below, we summarise the existing observations of merging binary black holes and closely related systems in section \ref{obs}, describe the plausible formation scenarios for binary black holes in \autoref{form}, discuss the predicted merger rates and merging object properties in \autoref{merge}, and speculate about the prospects for gravitational-wave astronomy in \autoref{prospect}.
 
@@ -100,9 +103,17 @@ Below, we summarise the existing observations of merging binary black holes and 
 
 \subsection{Gravitational-wave observations}
 
+
+\subsubsection{The confirmed detections to date}
 During its first science run, lasting from September of 2015 through January of 2016, the LIGO detector network observed three likely signals from the mergers of binary black holes.  GW150914 \citep{GW150914} and GW151226 \citep{GW151226} were confident, $> 5\sigma$ observations; LVT151012 was estimated as having a $\sim 90\%$ probability of being a gravitational-wave signal \citep{GW150914:rates,BBH:O1}, though the estimate is conservative and we shall treat it as a detection here.  During the second science run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections have been announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of them with the participation of the Virgo gravitational-wave observatory.   The observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  We shall focus on binary black holes here.
 
-The gravitational-wave signature of a merging binary encodes the properties of the binary: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \citep{Veitch:2015,GW150914:PE}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy data set.   For the heaviest black hole binaries such as GW150914, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately as the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of the gravitational-wave detectors.  For most black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of the frequency evolution during the inspiral phase.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the inspiral phasing at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black hole spins \citep[e.g.,][]{PoissonWill:1995}.  While all binary black holes observed today are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  We list the parameters of the black holes observed to date in table \ref{table:BHmasses}.
+\subsubsection{Information encoded in GW signals}
+The gravitational-wave signature of a merging binary encodes the properties of the binary: the component masses and spins. Coupled with information from two or more detectors in a network, this makes it possible to infer the sky location and orientation of the source and the distance to the source \citep{Veitch:2015,GW150914:PE}.  However, some of the source parameters are strongly correlated, leading to near-degeneracies when attempting to extract them from a noisy data set.   For the heaviest black hole binaries such as GW150914, the total mass $M \equiv M_1 + M_2$ is measured relatively accurately as the ringdown, whose frequency is a function of the total mass, falls in the sensitive frequency band of the gravitational-wave detectors.  For most black holes, the chirp mass $M_c \equiv M_1^{3/5} M_2^{3/5} M^{-1/5}$ is the better measured parameter, since it determines to lowest order the rate of the frequency evolution during the inspiral phase.  The mass ratio $q\equiv M_2/M_1 \leq 1$ is often quite poorly constrained, because it enters the inspiral phasing at a higher order in the ratio of the orbital velocity to the speed of light and is partially degenerate with the black hole spins \citep[e.g.,][]{PoissonWill:1995}.  
+
+\subsubsection{Information extracted from the observed GW signals}
+We list the parameters of the black holes observed to date in table \ref{table:BHmasses}. Specific system properties are discussed below.
+
+\textbf{Mass Ratios:} While all binary black holes observed today are consistent with having equal-mass components, mass ratios could be as extreme as $4:1$ in some cases.  
 
  
 \begin{table}
@@ -125,19 +136,33 @@ GW170814\footnote{\citet{GW170814}} & $24.1^{+1.4}_{-1.1}$ & &$30.5^{+5.7}_{-3.0
 
 %\todo {Add newest detections.  Table?  Better yet, figure, including XRBs and uncertainties?}
 
-Individual black hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the averaged dimensionless spin along the direction of the orbital angular momentum $\chi_\textrm{eff}$ is below $0.4$ for all observed events, and consistent with zero for all but one of them.  Interestingly, it is not consistent with zero for GW151226, the second lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating Kerr black hole.  Spin projections in the orbital plane are very poorly constrained for all events.
+\textbf{Black Hole Spins:} Individual black hole spins are difficult to measure precisely with gravitational waves.  However, we do know that none of the observed binaries could have large spins aligned with the orbital angular momentum; in fact the averaged dimensionless spin along the direction of the orbital angular momentum $\chi_\textrm{eff}$ is below $0.4$ for all observed events, and consistent with zero for all but one of them.  Interestingly, it is not consistent with zero for GW151226, the second lightest binary black hole detected, indicating that at least one of the components for that event must have been a rotating Kerr black hole.  Spin projections in the orbital plane are very poorly constrained for all events.
 
-All signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170608 reduced the sky region to only 60 deg$^2$.  Nonetheless, associations with specific host galaxies are impossible for all binary black hole mergers.  
+\textbf{Distances:} All signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170608 reduced the sky region to only 60 deg$^2$.  Nonetheless, associations with specific host galaxies are impossible for all binary black hole mergers.  
 
-Sensitivity to gravitational waves from binary mergers depends on the object mass; the horizon distance at which a source is detectable scales as $M_c^{5/6}$ for inspiral-dominated signals, so the surveyed volume scales as $M_c^{2.5}$.  While three observations are not sufficient to determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of $M^{-2.5}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates; these later are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$.  
+\textbf{Mass Distribution:} Sensitivity to gravitational waves from binary mergers depends on the object mass; the horizon distance at which a source is detectable scales as $M_c^{5/6}$ for inspiral-dominated signals, so the surveyed volume scales as $M_c^{2.5}$.  While three observations are not sufficient to determine the mass distribution of merging binary black holes, the observed broad mass distribution, deconvolved with the mass-dependent selection effects, could be consistent with an intrinsic mass distribution of $M^{-2.5}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}.  The uncertainty in the mass distribution is relayed into the uncertainty on inferred merger rates; these later are consistent with a broad range spanning $\sim 10$ -- $200$ Gpc$^{-3}$ yr$^{-1}$.  
+%mass distribution is a more derived quantity than any of the others mentioned above. Is there a better place for this?
 
-All LIGO signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR}.
+\textbf{Testing General Relativity:} All LIGO signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR}.
 
-\subsection{Other observations}
+\subsection{Electromagnetic observations}
+%This section is currently very jargony... lots of terms that will mystify the non-astro student.
 
-There is a range of electromagnetic observations that shed light on various intermediate stages of compact object binary formation and evolution preceding merger.  These range from initial mass and period distributions of massive stellar binaries \citep[e.g.,][]{Sana:2012} and luminous red novae, which may be associated with common envelope events \citep{Ivanova:2013LRN} to supernovae, X-ray binaries including Be X-ray binaries and ultra-luminous X-ray binaries, Galactic binary radio pulsars, and gamma ray bursts.  Here, we focus on observations of X-ray binaries containing a black hole accreting mass from a companion, either through wind-driven mass loss and Bondi-Hoyle accretion (high-mass X-ray binaries) or Roche lobe overflow from a companion that has expanded beyond the $L_1$ Lagrange point  (low-mass X-ray binaries).   
+\subsubsection{Electromagnetic observations as complementary probes}
 
-Black-hole X-ray binaries provide the most direct connection to merging binary black holes.  In fact, some of the observed high-mass X-ray binaries may ultimately produce gravitational-wave sources \citep{CygnusX3:2012}.  Black-hole X-ray binaries with dynamical mass measurements provide the only other secure measurements of black holes masses in addition to the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses on the low-mass end (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more on the high mass end.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses guaranteed to exceed $15\, M_\odot$.  The masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses} along with the masses of gravitational-wave sources.  This figure does not include speculative but potentially very exciting intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will be detectable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008}.
+\textcolor{red}{Placeholder intro paragraph -- this section needs an intro.} The systems that eventually become merging binary black holes have most likely passed through a number of other phases of existence, including phases in which the system or its component stars emitted electromagnetic radiation. Many other binary evolution pathways are possible, including a large fraction which do not end as a binary black hole merger. Binary evolutionary pathways are discussed in more detail in \autoref{form}. In this section we describe some of the key electromagnetic observations that -- together with the GW observations of merging black holes -- shed light on the evolution of massive stellar binaries.
+
+Many electromagnetic observations of binary stars have been made over the years. \textcolor{red}{Want to make it clear here that the more mature field is the EM one, but that GWs have suddenly invigorated things?} A subset of these shed light on various intermediate stages of compact object binary formation and evolution preceding merger. These include observations of initial mass and period distributions of massive stellar binaries \citep[e.g.,][]{Sana:2012}, and observations of luminous red novae, which may be associated with common envelope events \citep{Ivanova:2013LRN}. These also include observations of supernovae, X-ray binaries (including Be X-ray binaries, and ultra-luminous X-ray binaries -- and other types??), Galactic binary radio pulsars, and gamma ray bursts. We focus here on black hole X-ray binaries, the type of binary star with the closest connection to merging binary black holes.
+
+%observations of mass and period distributions of luminous red novae or just observations of them in general??
+
+\subsubsection{X-Ray Binaries}
+
+\textcolor{red}{Say (briefly) what an X-ray binary is?} We focus here on observations of X-ray binaries containing a black hole accreting mass from a companion, either through wind-driven mass loss and Bondi-Hoyle accretion (high-mass X-ray binaries) or Roche lobe overflow from a companion that has expanded beyond the $L_1$ Lagrange point  (low-mass X-ray binaries).   \textcolor{red}{jargooooon}
+Some of the observed high-mass X-ray binaries may ultimately produce gravitational-wave sources \citep{CygnusX3:2012}.  %what do you mean by "ultimately produce GW sources?"
+
+\textbf{Black hole masses:} 
+ Black-hole X-ray binaries with dynamical mass measurements provide the only other secure measurements of black hole masses in addition to the gravitational-wave observations described above.  \citet{Ozel:2010} and \citet{Farr:2011} summarize the mass distribution of black-hole X-ray binaries; they find a distribution which ranges from 4 or 5 solar masses on the low-mass end (with a possible mass gap between neutron star and black hole masses) to $\sim 15\, M_\odot$ or more on the high mass end.  However, given the doubts subsequently placed on the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015}, there are no known black holes with dynamically confirmed masses guaranteed to exceed $15\, M_\odot$.  The masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses} along with the masses of gravitational-wave sources.  This figure does not include speculative but potentially very exciting intermediate-mass black holes \citep{MillerColbert:2004,Pasham:2014}; if such few-hundred solar-mass black holes generically exist in globular clusters, they will be detectable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008}.
 %\todo{Add GC X-ray binary observations} 
 
 \begin{figure}
@@ -148,19 +173,24 @@ Black-hole X-ray binaries provide the most direct connection to merging binary b
 \end{figure}
 
 
-Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, assumed to correspond to the radius of the innermost stable circular orbit, which is a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the models can suffer from significant systematics.  For example, for 2 of 6 systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining 3 systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
+\textbf{Black Hole Spin Magnitudes:} Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, assumed to correspond to the radius of the innermost stable circular orbit, which is a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the models can suffer from significant systematics.  For example, for 2 of 6 systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining 3 systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
-Most relevantly, these high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  %Moreover, such high-mass X-ray binaries may be direct progenitors of merging binary black holes \citep{Bulik:2008,CygnusX3:2012}; in fact, 
+\textbf{Inconsistency with Spin Observations from GW Sources?} Most relevantly, these high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  %Moreover, such high-mass X-ray binaries may be direct progenitors of merging binary black holes \citep{Bulik:2008,CygnusX3:2012}; in fact, 
 Isolated binaries that form binary black holes must go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins; however, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the LIGO-observed binary black holes \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements could be very sensitive to the modelling assumptions, and the systematic errors may dominated the claimed statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
 
-We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the micro
+\textbf{Black Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the micro
 quasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in massive binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
 
 \section{Formation scenarios}\label{form}
 
-When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star -- and even more surprised by the high black holes masses, in excess of the observed black hole masses in X-ray binaries.  Should this be a source of surprise?
+\textcolor{red}{Section needs an intro.}
 
+When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star \textcolor{red}{(Need to say why people were surprised by BHs not NSs.)} -- and even more surprised by the high black hole masses, in excess of the observed black hole masses in X-ray binaries.  Should this be a source of surprise? 
 The short answer is that the masses themselves should not be surprising -- but perhaps the very existence of merging neutron stars and black holes should be.  But let us start with the masses.  
+
+\subsubsection{Understanding the masses of the merging black holes}
+
+\textcolor{red}{Needs intro summary sentence. Placeholder: The apparent discrepancy between BH masses in GW mergers and those in observed X-ray binaries can be understood in terms of the chemical composition of the stars that formed them.}
 
 Compact object masses in double compact object binaries are set by the mass of the star before the collapse or supernova explosion at the end of stellar evolution and the physics of the collapse itself.  The compact object is unlikely to accrete a significant amount of mass after collapse: doubling its mass at the Eddington limit, which corresponds to an equilibrium between the pressure of radiation released during accretion on the infalling material and gravity, would take more than 100 million years, and the massive companion will only survive for a small fraction of that time.  The mass of the compact remnant is thus set by the pre-collapse mass of the stellar core: the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on up through iron.  Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a heavy star will end up in a carbon--oxygen core.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy black holes before?  
 
@@ -174,6 +204,7 @@ The answer has to do with the mass loss from massive stars.  The intense radiati
 \end{figure}
 %\todo{Include mass plots from Ben, or reuse Chris's old plot?, or attached?}
 
+\subsubsection{The Separation Question}
 The more surprising question, and perhaps the key problem of gravitational-wave astronomy, is why compact object binaries ever merge at all.  And this one boils down to separation.  
 
 Gravitational-wave emission is a very strong function of separation.  Gravitational waves can certainly remove a lot of energy very quickly: the peak gravitational-wave luminosity during a compact binary merger is a few thousandth of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ erg per second, such mergers 'outshine' all the stars in the visible Universe combined.  But gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, so widely separated binaries lose energy and inspiral very slowly.  \autoref{fig:periapsis} shows the maximum periapsis separation that a binary composed of two equal-mass compact objects can have and still merge within the age of the Universe.  Thirty-solar mass double black holes such as those responsible for GW150914 would have had to start with a separation of less than 50 solar radii, or a quarter of the distance from the Earth to the Sun, if they were to be driven to merger by gravitational-wave emission alone.
