Worked on compact object mass section

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -192,9 +192,13 @@ The short answer is that the masses themselves should not be surprising -- but p
 
 \textcolor{red}{Needs intro summary sentence. Placeholder: The apparent discrepancy between BH masses in GW mergers and those in observed X-ray binaries can be understood in terms of the chemical composition of the stars that formed them.}
 
-Compact object masses in double compact object binaries are set by the mass of the star before the collapse or supernova explosion at the end of stellar evolution and the physics of the collapse itself.  The compact object is unlikely to accrete a significant amount of mass after collapse: doubling its mass at the Eddington limit, which corresponds to an equilibrium between the pressure of radiation released during accretion on the infalling material and gravity, would take more than 100 million years, and the massive companion will only survive for a small fraction of that time.  The mass of the compact remnant is thus set by the pre-collapse mass of the stellar core: the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on up through iron.  Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a heavy star will end up in a carbon--oxygen core.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy black holes before?  
+\textbf{Compact object masses over time:} Once formed by stellar collapse or supernova, the compact objects in the binaries of interest will have roughly constant masses. The first compact object to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit, which corresponds to an equilibrium between gravity and the pressure on infalling material of the radiation released during accretion, would take more than 100 million years; the massive companion will only survive for a small fraction of that time. After formation of the second compact object, there is very little further accretion in the system. The mass of each compact remnant is thus almost equal to its mass at formation. 
 
-The answer has to do with the mass loss from massive stars.  The intense radiation from these stars -- they may have luminosities of order a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star.  Metals like iron, with their many absorption lines, are particularly efficient at capturing the radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity, is a key ingredient in determining stellar winds \citep{Vink:2001}.  Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the metallicity of our solar neighborhood (where roughly 2\% of the stellar matter by mass are metals -- elements heavier than hydrogen and helium, formed by earlier stellar generations rather than during the Big Bang), the maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}.  This matches the observations described in the previous section.  Thus, forming heavier black holes requires stellar progenitors born in regions with lower metallicity, that is, fewer preceding stellar generations.  This might either involve low-mass metal-poor galaxies, or formation in the very distant past with a long delay time between star formation and the relatively local black hole mergers \citep{Belczynski:2016}, but more on that below.  Figure \ref{fig:BHremnant} illustrates this by showing the compact remnant (neutron star or black hole) mass as a function of the zero-age main sequence stellar mass as modeled with the COMPAS binary population synthesis code (see \url{http://www.sr.bham.ac.uk/compas}).
+\textbf{Compact object masses at formation:} Compact object masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the physics of the collapse itself. \textcolor{red}{--what does it mean to say that the mass is set by the physics?} Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core -- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron -- determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the compact object remnant.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy \textcolor{red}{(are we generally ok with saying "heavy" throughout as equivalent to "massive"? I probably wouldn't, but if it's standard then ok.)} black holes in X-ray binaries. The answer has to do with the mass loss from massive stars. 
+
+\textbf{The importance of stellar winds:} The intense radiation from massive stars -- whose luminosities may be a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than 1/3 of the initial stellar mass. \textcolor{red}{(adding a sentence or two here to spell out your point!)}   Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity -- the fraction of the star's mass that's in elements heavier than hydrogen and helium -- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Forming heavier black holes, like those observed by LIGO, requires stellar progenitors born in regions with lower metallicity. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
+
+\textbf{Why LIGO sources might come from low-metallicity stars:} Because metals are produced by stars, low-metallicity regions are typically those with fewer preceding stellar generations.  Several plausible scenarios could explain why the LIGO sources came from low-metallicity stars. For the more distant sources, explanations include formation in low-mass metal-poor galaxies, while for relatively local mergers the parent stars could have formed in the very distant past, with a long delay time between star formation and black hole merger \citep{Belczynski:2016}. \textcolor{red}{This issue is discussed in more detail in Section ??? -- which I haven't read in detail yet, so I might have distorted the meaning of this paragraph... sorry!.}
 
 \begin{figure}
 	\centering
